HTML & CSS - done

--- a/invoice-generator/invoice-generator.html
+++ b/invoice-generator/invoice-generator.html
@@ -15,9 +15,9 @@
             </div>
             <div class="section-2">
                 <div class="container-btn">
-                    <button class="wash-car">Wash Car</button>
-                    <button class="mow-lawn">Mow Lawn</button>
-                    <button class="pull-weeds">Pull Weeds</button>
+                    <button class="wash-car">Wash Car: $10</button>
+                    <button class="mow-lawn">Mow Lawn: $20</button>
+                    <button class="pull-weeds">Pull Weeds: $30</button>
                 </div>
                 <div class="container-task">
                     <p class="p-task">TASK</p>
@@ -25,11 +25,13 @@
                     <div class="tasks"></div>
                 </div>
                 <div class="sep"></div>
-                <div class="final">
-                    <p class="notes">NOTES</p>
+                <div class="final-1">
+                    <p class="p-notes">NOTES</p>
                     <p class="p-total-amount">TOTAL AMOUNT</p>
+                </div>
+                <div class="final-2"> 
                     <span class="payment"></span>
-                    <h1 class="total-amount">$0</h1>
+                    <h1 class="h1-total-amount">$0</h1>
                 </div>
                 <button class="invoice-btn">Send invoice</button>
             </div>
